--- a/src/block-common-css/editor.scss
+++ b/src/block-common-css/editor.scss
@@ -168,7 +168,36 @@
 			list-style: none;
 			line-height: inherit;
 			button {
-				padding: 12px;
+				padding: 8px;
+			}
+		}
+	}
+}
+
+.wcb-buttons__inner {
+	.block-list-appender.wp-block {
+		box-shadow: inset 0 0 0 1px #cbd5e1;
+		margin-right: -60px !important;
+		&:hover {
+			box-shadow: inset 0 0 0 1px #475569;
+		}
+		position: absolute;
+		list-style: none;
+		padding: 0;
+		z-index: 2;
+		bottom: 0;
+		right: 0;
+		button {
+			padding: 0;
+		}
+		&:only-child {
+			position: relative;
+			right: auto;
+			align-self: center;
+			list-style: none;
+			line-height: inherit;
+			button {
+				padding: 8px;
 			}
 		}
 	}
