--- a/src/block-faq/style.scss
+++ b/src/block-faq/style.scss
@@ -1,6 +1,5 @@
 .wcb-faq-child__wrap {
-	@apply border border-gray-300 overflow-hidden;
-
+	@apply overflow-hidden;
 	&.active {
 		.wcb-faq-child__icon--active {
 			display: block;
@@ -8,10 +7,18 @@
 		.wcb-faq-child__icon--inactive {
 			display: none;
 		}
-		/* .wcb-faq-child__answer {
-			display: block;
-		} */
 	}
+}
+
+.wcb-faq-child__wrap,
+.wcb-faq-child__separator {
+	@apply border border-gray-300;
+}
+
+.wcb-faq-child__separator {
+	border-bottom-width: 0 !important;
+	border-left-width: 0 !important;
+	border-right-width: 0 !important;
 }
 
 .wcb-faq__inner {
@@ -20,10 +27,16 @@
 }
 
 .wcb-faq-child__question {
-	@apply flex items-center flex-1 w-full overflow-hidden;
+	@apply flex items-center flex-1 w-full overflow-hidden focus:outline-none text-base;
+	font-weight: 500;
+	color: #111827;
 	&--icon-right {
 		@apply justify-between;
 	}
+}
+.wcb-faq-child__answer {
+	color: #4b5563;
+	@apply text-base;
 }
 
 .wcb-faq-child__icon--active {
@@ -31,10 +44,6 @@
 }
 .wcb-faq-child__icon--inactive {
 	display: block;
-}
-
-.wcb-faq-child__answer {
-	display: none;
 }
 
 .wcb-faq-child__question-text,
