--- a/src/block-posts-grid/common.scss
+++ b/src/block-posts-grid/common.scss
@@ -43,7 +43,6 @@
 	img {
 		display: block;
 		width: 100%;
-		border-radius: 10px;
 	}
 }
 
@@ -76,7 +75,6 @@
 			margin-bottom: 4px;
 			padding: 4px 10px;
 			font-size: 12px;
-			border-radius: 8px;
 			text-decoration: none;
 		}
 	}
@@ -94,7 +92,7 @@
 		justify-content: center;
 		text-decoration: none;
 		@apply space-x-1 py-1 px-3;
-		&.prev {
+		&.prev svg {
 			transform: rotate(180deg);
 		}
 	}
@@ -116,8 +114,8 @@
 	align-items: center;
 	line-height: 1;
 	margin-right: 1rem;
-	margin-bottom: 2px;
-	margin-top: 2px;
+	margin-bottom: 4px;
+	margin-top: 4px;
 }
 
 .wcbPostCard__meta-author-name {
@@ -136,9 +134,11 @@
 	align-items: center;
 	justify-content: flex-start;
 	line-height: 1;
-	margin-bottom: 2px;
-	margin-top: 2px;
-	@apply space-x-2;
+	> * {
+		margin-bottom: 4px;
+		margin-top: 4px;
+		margin-right: 8px;
+	}
 }
 
 .wcbPostCard__meta-date,
