update postgrid all

--- a/src/block-common-css/editor.scss
+++ b/src/block-common-css/editor.scss
@@ -3,6 +3,17 @@
 		width: 100%;
 	}
 
+	.components-form-token-field__suggestions-list {
+		/* Hide scrollbar for Chrome, Safari and Opera */
+		&::-webkit-scrollbar {
+			display: none;
+		}
+
+		/* Hide scrollbar for IE, Edge and Firefox */
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+	}
+
 	.components-notice {
 		@apply rounded-sm;
 	}
