--- a/src/block-common-css/editor.scss
+++ b/src/block-common-css/editor.scss
@@ -1,3 +1,8 @@
+.block-editor-block-list__layout .block-editor-block-list__block.is-selected {
+	box-shadow: 0 0 0 1.5px #007cba;
+	border-radius: 2px;
+}
+
 .wcb-inspectorControls__panel {
 	.components-panel__row > .components-spacer {
 		width: 100%;
