--- a/src/block-image/style.scss
+++ b/src/block-image/style.scss
@@ -1,4 +1,5 @@
 .wcb-image__wrap {
+	position: relative;
 	&.alignfull,
 	&.alignwide {
 		img {
@@ -6,4 +7,13 @@
 			width: 100%;
 		}
 	}
+}
+
+.wcb-image__overlay-bg {
+	@apply absolute inset-0 bg-black/20;
+}
+
+.wcb-image__overlay-content {
+	position: absolute;
+	inset: 1rem;
 }
