--- a/src/block-image/style.scss
+++ b/src/block-image/style.scss
@@ -7,13 +7,23 @@
 			width: 100%;
 		}
 	}
+
+	.wp-element-caption {
+		position: relative;
+		z-index: 1;
+	}
+
+	&--overlay {
+		.wp-element-caption {
+			display: none;
+		}
+	}
+}
+
+.wcb-image__overlay-wrap {
+	@apply absolute inset-0 flex overflow-hidden;
 }
 
 .wcb-image__overlay-bg {
-	@apply absolute inset-0 bg-black/20;
-}
-
-.wcb-image__overlay-content {
-	position: absolute;
-	inset: 1rem;
+	@apply flex-1 bg-white/50 flex flex-col;
 }
