--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,3 +12,6 @@
 @import "./_theme_fonts";
 @import "./_theme_custom";
 @import "./_admin_editor_custom";
+
+/* for dashboard */
+@import "../____dashboard/style";
