--- a/src/block-container/editor.scss
+++ b/src/block-container/editor.scss
@@ -5,7 +5,7 @@
 }
 
 .wcb-container__inner {
-	/* @apply select-none; */
+	/* @apply shadow-none #{!important}; */
 
 	&.block-editor-block-list__layout.block-editor-block-list__block {
 		position: initial !important;
@@ -14,6 +14,7 @@
 	.block-editor-button-block-appender {
 		/* box-shadow: none; */
 	}
+
 	.block-list-appender.wp-block {
 		/* width: unset;
 		flex: none; */
