--- a/src/block-common-css/style.scss
+++ b/src/block-common-css/style.scss
@@ -62,3 +62,25 @@
 	clip: auto;
 	white-space: normal;
 }
+
+/*  */
+
+.wcb-posts-grid__pagination-number,
+.wcb-posts-grid__pagination,
+.wcb-products__pagination {
+	display: flex;
+	@apply space-x-1.5;
+}
+.wcb-posts-grid__pagination,
+.wcb-products__pagination {
+	.page-numbers {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		text-decoration: none;
+		@apply space-x-1 py-1 px-3;
+		&.prev svg {
+			transform: rotate(180deg);
+		}
+	}
+}
