--- a/src/block-products/style.scss
+++ b/src/block-products/style.scss
@@ -6,7 +6,17 @@
 
 	&.wcb-products__product--btnInsideImage {
 		.wcb-products__product-add-to-cart {
-			@apply absolute left-1/2 -translate-x-1/2 bottom-5;
+			@apply absolute left-1/2 -translate-x-1/2 bottom-5 z-10 opacity-0 invisible transition-opacity;
+		}
+		&:hover {
+			.wcb-products__product-add-to-cart {
+				@apply opacity-100 visible;
+			}
+		}
+	}
+	&.wcb-products__product--onsaleInsideImage {
+		.wcb-products__product-salebadge {
+			@apply absolute left-2 top-2 z-10;
 		}
 	}
 
