--- a/src/block-testimonials/common.scss
+++ b/src/block-testimonials/common.scss
@@ -1,36 +1,8 @@
-/* .glide {
-	position: relative;
-}
-
-.glide__arrow {
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	padding: 0.5rem;
-	&--left {
-		left: -1rem;
-	}
-	&--right {
-		right: -1rem;
-	}
-}
-
-.glide__bullets {
-	text-align: center;
-}
-
-.glide__bullet {
-	@apply w-2 h-2 mx-1.5;
-	background-color: gray;
-	border-radius: 999px;
-	&.glide__bullet--active {
-		background-color: black;
-	}
-} */
-
 /*  */
 /*  */
 .wcb-testimonials__wrap {
+	padding: 32px;
+
 	.slick-dots {
 		position: relative;
 		bottom: auto;
@@ -44,6 +16,8 @@
 
 	.slick-prev,
 	.slick-next {
+		z-index: 3;
+		background: #fff;
 		color: black;
 		padding: 0.5rem;
 		width: unset;
@@ -67,6 +41,9 @@
 	display: inline-flex;
 	align-items: flex-start;
 	flex-shrink: 0;
+	img {
+		object-fit: cover;
+	}
 }
 .wcb-testimonials__item-user {
 	display: inline-flex;
