--- a/src/block-buttons/style.scss
+++ b/src/block-buttons/style.scss
@@ -1,14 +1,18 @@
 .editor-styles-wrapper .wcb-buttons__inner {
-	> .wp-block {
+	.wp-block {
 		margin-left: 0;
 		margin-right: 0;
+		margin-top: 0;
+		margin-bottom: 0;
 	}
 }
 
 .wcb-buttons__inner {
 	display: flex;
-	> .wp-block {
+	.wp-block {
 		margin-left: 0;
 		margin-right: 0;
+		margin-top: 0;
+		margin-bottom: 0;
 	}
 }
