update container custom-width

--- a/src/block-common-css/editor.scss
+++ b/src/block-common-css/editor.scss
@@ -1,3 +1,10 @@
+.wcb-BorderBoxControl {
+	.components-base-control {
+		margin-bottom: 0 !important;
+	}
+}
+/*  */
+
 .wcb-products__wrap,
 .wcb-posts-grid__wrap {
 	a {
