--- a/src/____dashboard/style.scss
+++ b/src/____dashboard/style.scss
@@ -43,6 +43,20 @@
 	/* button {
 		@apply inline-flex items-center rounded-xl border border-transparent px-4 py-2 text-sm font-medium text-white shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2;
 	} */
+
+	input.number-hide-arrow {
+		/* Chrome, Safari, Edge, Opera */
+		&::-webkit-outer-spin-button,
+		&::-webkit-inner-spin-button {
+			-webkit-appearance: none;
+			margin: 0;
+		}
+
+		/* Firefox */
+		&[type="number"] {
+			-moz-appearance: textfield;
+		}
+	}
 }
 
 /* ------------------------------------------------------------------ */
