update testimonial object fit

--- a/src/block-container/style.scss
+++ b/src/block-container/style.scss
@@ -1,6 +1,11 @@
-body .wcb-container__wrap .wp-block {
-	margin-left: initial;
-	margin-right: initial;
+body .wcb-container__wrap {
+	.wp-block {
+		margin-left: initial;
+		margin-right: initial;
+	}
+	.wcb-container__inner {
+		margin: 0 auto;
+	}
 }
 
 /*  */
