--- a/src/block-testimonials/common.scss
+++ b/src/block-testimonials/common.scss
@@ -39,6 +39,12 @@
 	}
 }
 
+.wcb-testimonials__item-inner {
+	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .wcb-testimonials__item-image {
 	display: inline-flex;
 	align-items: flex-start;
