--- a/src/block-posts-grid/common.scss
+++ b/src/block-posts-grid/common.scss
@@ -129,3 +129,11 @@
 	display: inline-flex;
 	align-items: center;
 }
+
+.wcb-products__product-add-to-cart {
+	display: inline-grid;
+	gap: 10px;
+	.added_to_cart {
+		display: inline-block;
+	}
+}
