update tab block

--- a/src/block-tabs/style.scss
+++ b/src/block-tabs/style.scss
@@ -3,7 +3,7 @@
 }
 
 .wcb-tabs__title_inner {
-	@apply inline-flex gap-1 p-2;
+	@apply inline-flex items-center justify-center gap-1 p-2;
 }
 
 .wcb-tabs__title {
