--- a/src/block-common-css/editor.scss
+++ b/src/block-common-css/editor.scss
@@ -1,3 +1,10 @@
+.MyBorderControl__BorderRadiusControl {
+	.components-border-radius-control .components-base-control__label {
+		display: none !important;
+	}
+}
+
+/*  */
 .wcb-BorderBoxControl {
 	.components-base-control {
 		margin-bottom: 0 !important;
