--- a/src/block-testimonials/common.scss
+++ b/src/block-testimonials/common.scss
@@ -34,6 +34,9 @@
 
 .wcb-testimonials__item {
 	position: relative;
+	.wcb-testimonials__item-background {
+		position: relative;
+	}
 	.wcb-testimonials__item-wrap-inner {
 		display: flex;
 	}
