#feature countdown apply setting add 5 presets

--- a/src/block-countdown/style.scss
+++ b/src/block-countdown/style.scss
@@ -17,10 +17,51 @@
 }
 .wcb-countdown__box {
     position: relative;
-    display: flex;
-    flex-direction: column;
     width: 155px;
-    height: 155px;
-    aspect-ratio: 1;
-    justify-content: center;
+    text-align: center;
+}
+.wcb-countdown__content {
+    &:not(&.wcb-countdown-5){
+        .wcb-countdown__box {
+            display: flex;
+            flex-direction: column;
+            height: 155px;
+            aspect-ratio: 1;
+            justify-content: center;
+        }
+    }
+    &.wcb-countdown-1{
+        .wcb-countdown__box{
+            border-radius: 50%;
+            background-color: #f0f0f1;
+        }
+    }
+    &.wcb-countdown-2{
+        .wcb-countdown__box{
+            border-radius: 50%;
+            border: 1px solid rgba(33,33,33,0.67);
+        }
+    }
+    &.wcb-countdown-3{
+        .wcb-countdown__box{
+            border-radius: 4px;
+            color: #fff;
+            background-color: #2B2B2B;
+        }
+    }
+    &.wcb-countdown-4{
+        .wcb-countdown__box{
+            border-radius: 4px;
+            border: 1px solid rgba(33,33,33,0.67);
+        }
+    }
+    &.wcb-countdown-5{
+        .wcb-countdown__box .wcb-countdown__number{
+           display: inline-block;
+           margin-right: 22px;
+        }
+    }
+    .wcb-countdown__box:not(:last-child) {
+        margin-right: 40px;
+    }
 }
