--- a/src/block-container/editor.scss
+++ b/src/block-container/editor.scss
@@ -3,3 +3,11 @@
 		position: initial !important;
 	}
 }
+
+.is-layout-flow.block-editor-block-list__block:not(.is-selected)>.block-list-appender:only-child .block-editor-inserter {
+    opacity: 1;
+}
+
+.editor-styles-wrapper .wp-block[data-align=full] {
+    display: contents;
+}
