change the class slider

--- a/src/block-slider/editor.scss
+++ b/src/block-slider/editor.scss
@@ -1,6 +1,6 @@
-.wcb-faq-child__wrap {
+.wcb-slider-child__wrap {
 	&.active {
-		.wcb-faq-child__answer {
+		.wcb-slider-child__answer {
 			display: block !important;
 		}
 	}
