--- a/src/block-icon/style.scss
+++ b/src/block-icon/style.scss
@@ -1,33 +1,9 @@
-.wcb-icon-list__content {
-	flex-grow: 1;
-}
-
 .wcb-icon-list__icon-wrap {
-	flex-shrink: 0;
-}
-.wcb-icon-list__icon {
 	display: flex;
-	margin: 1rem;
-}
-
-.wcb-icon-list__content-title {
-	flex-grow: 0;
-	margin: 1rem;
-}
-
-.wcb-icon-list__heading {
-	margin: 0;
-}
-
-.wcb-icon-list__separator {
-	display: inline-block;
-}
-
-.wcb-icon-list__content-wrap {
-	flex-grow: 1;
-}
-
-.wcb-icon-list__image {
-	flex-shrink: 0;
-	display: inline-block;
+	.wp-block {
+		margin-left: 0;
+		margin-right: 0;
+		margin-top: 4px;
+		margin-bottom: 4px;
+	}
 }
