finished block icon

--- a/src/block-icon/style.scss
+++ b/src/block-icon/style.scss
@@ -1,69 +1,6 @@
-.wcb-icon__box {
-    position: relative;
-    text-align: center;
-}
 .wcb-icon__content {
-    &:not(&.wcb-icon-5){
-        .wcb-icon__box {
-            display: flex;
-            flex-direction: column;
-            aspect-ratio: 1;
-        }
+    display: inline-block;
+    i {
+        display: block;
     }
-    &.wcb-icon-1{
-        .wcb-icon__box{
-            border-radius: 50%;
-            background-color: #f0f0f1;
-        }
-    }
-    &.wcb-icon-2{
-        .wcb-icon__box{
-            border-radius: 50%;
-            border: 1px solid #333333;
-        }
-    }
-    &.wcb-icon-3{
-        .wcb-icon__box{
-            border-radius: 4px;
-            color: #fff;
-            background-color: #2B2B2B;
-        }
-    }
-    &.wcb-icon-4{
-        .wcb-icon__box{
-            border-radius: 4px;
-            border: 1px solid rgba(33,33,33,0.67);
-        }
-    }
-    &.wcb-icon-5{
-        .wcb-icon__box .wcb-icon__number{
-           display: inline-block;
-           margin-right: 5px;
-        }
-        .wcb-icon__label {
-            display: inline-block;
-        }
-    }
-    .wcb-icon__box {
-        justify-content: center;
-    }
-    .wcb-justify-center {
-        justify-content: center;
-    }
-    .wcb-justify-end {
-        justify-content: end;
-    }
-    .wcb-justify-start {
-        justify-content: start;
-    }
-    .wcb-flex-col {
-        flex-direction: column;
-    }
-    .wcb-flex-row {
-        flex-direction: row;
-    }
-}
-
-.wcb-icon__box .wcb-icon__number {
-    line-height: 84px !important;
 }
