--- a/src/block-slider-child/editor.scss
+++ b/src/block-slider-child/editor.scss
@@ -1,1 +1,14 @@
-// Empty for now - styles will be inherited from parent 
+.wcb-slider-child__btn {
+    display: flex;
+    justify-content: center;
+}
+
+.wcb-slider-child__btn-inner {
+    display: flex;
+    background-color: #121314;
+    color: white;
+    width: 10rem;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+}
