--- a/src/block-slider-child/style.scss
+++ b/src/block-slider-child/style.scss
@@ -1,1 +1,43 @@
- 
+	.wcb-slider-child__wrap {
+	.wcb-slider-child__item {
+		position: relative;
+		
+		.wcb-slider-child__item-background {
+			position: relative;
+		}
+		
+		.wcb-slider-child__item-wrap-inner {
+			display: flex;
+			align-items: center;
+			gap: 1rem;
+		}
+		
+		.wcb-slider-child__item-inner {
+			flex: 1;
+			display: flex;
+			flex-direction: column;
+			gap: 0.5rem;
+		}
+	}
+	
+	// Responsive layout for different image positions
+	&[data-image-position="left"] .wcb-slider-child__item-wrap-inner,
+	&[data-image-position="right"] .wcb-slider-child__item-wrap-inner {
+		flex-direction: row;
+	}
+}
+
+.wcb-slider-child__btn {
+    display: flex;
+    justify-content: center;
+}
+
+.wcb-slider-child__btn-inner {
+    display: flex;
+    background-color: #121314;
+    color: white;
+    width: 10rem;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+}
