add style for preset

--- a/src/block-slider-child/style.scss
+++ b/src/block-slider-child/style.scss
@@ -8,16 +8,16 @@
 		
 		.wcb-slider-child__item-wrap-inner {
 			display: flex;
-			align-items: center;
+			// align-items: center;
 			gap: 1rem;
 		}
 		
-		.wcb-slider-child__item-inner {
-			flex: 1;
-			display: flex;
-			flex-direction: column;
-			gap: 0.5rem;
-		}
+		// .wcb-slider-child__item-inner {
+		// 	flex: 1;
+		// 	display: flex;
+		// 	flex-direction: column;
+		// 	gap: 0.5rem;
+		// }
 	}
 	
 	// Responsive layout for different image positions
