--- a/src/block-slider-child/editor.scss
+++ b/src/block-slider-child/editor.scss
@@ -3,12 +3,12 @@
     justify-content: center;
 }
 
-.wcb-slider-child__btn-inner {
-    display: flex;
-    background-color: #121314;
-    color: white;
-    width: 10rem;
-    height: 50px;
-    align-items: center;
-    justify-content: center;
-}
+// .wcb-slider-child__btn-inner {
+//     display: flex;
+//     background-color: #121314;
+//     color: white;
+//     width: 10rem;
+//     height: 50px;
+//     align-items: center;
+//     justify-content: center;
+// }
