--- a/src/block-slider/editor.scss
+++ b/src/block-slider/editor.scss
@@ -1,1 +1,20 @@
+@import "./common";
 
+/* Ensure editor styles match frontend styles */
+.wcb-slider__wrap {
+	position: relative;
+}
+
+.wcb-slider__wrap-items {
+	position: relative;
+}
+
+/* Override any Gutenberg editor styles that might interfere */
+.wp-block[data-type="wcb/slider"] {
+	.wcb-slider__wrap {
+		/* Ensure consistent styling between editor and frontend */
+		> .wcb-slider__wrap-items {
+			/* Match frontend slider structure */
+		}
+	}
+}
