--- a/src/block-slider/common.scss
+++ b/src/block-slider/common.scss
@@ -33,9 +33,9 @@
 }
 
 .wcb-slider__item {
-	position: relative;
+	// position: relative;
 	.wcb-slider__item-background {
-		position: relative;
+		// position: relative;
 	}
 	.wcb-slider__item-wrap-inner {
 		display: flex;
